<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/blur_image_dark"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_top_gradient_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/gradient_top_bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_detail_user_icon_layout_margin_top"
            android:layout_weight="1">

            <TextView
                android:id="@+id/userNameTextView"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/hint_user_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_view_large_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/memberShipTextView"
                style="@style/Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/member_ship_text_view_margin_top"
                android:layout_below="@+id/userNameTextView"
                android:gravity="center_horizontal"
                android:text="@string/hint_membership"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_12"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/member_ship_renew_button_layout_margin_top"
            android:background="#40FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40000000"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/renew_button_layout_padding_top_bottom"
            android:paddingTop="@dimen/renew_button_layout_padding_top_bottom">

            <TextView
                android:id="@+id/renewButtonTextView"
                style="@style/Light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/renew_button_drawable_padding"
                android:drawableTop="@drawable/renew_icon"
                android:gravity="center_horizontal"
                android:text="@string/label_buffet_subscription"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_12" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#40FFFFFF" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cineplexCreditCountTextView"
                    style="@style/Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/label_cineplex_credit_count_zero"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_large_size" />

                <TextView
                    android:id="@+id/cineplexCreditTextView"
                    style="@style/Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cineplex_credit_text_view_margin_top"
                    android:gravity="center_horizontal"
                    android:text="@string/label_cineplex_credit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#40FFFFFF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="352dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/transactionHistoryButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/label_transaction_history"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size" />

                <Button
                    android:id="@+id/renewBuffetButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/label_renew_buffet_subscription"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size" />

                <Button
                    android:id="@+id/cineplexButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/label_add_cineplex_credits"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/voucherButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/label_using_voucher"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size" />

                <Button
                    android:id="@+id/activateTVButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/label_activate_TV"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size" />

                <Button
                    android:id="@+id/signOutButton"
                    style="@style/Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cineplex_credit_button_margin"
                    android:layout_marginRight="@dimen/cineplex_credit_button_margin"
                    android:layout_marginTop="@dimen/cineplex_credit_button_margin"
                    android:background="@drawable/signout_button_bg"
                    android:paddingBottom="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:paddingLeft="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingRight="@dimen/cineplex_credit_button_padding_left_right"
                    android:paddingTop="@dimen/cineplex_credit_button_padding_top_bottom"
                    android:text="@string/labe_sign_out"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_medium_size" />

                <TextView
                    android:id="@+id/privacyPolicyTextView"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/privacy_policy_text_view_margin_top"
                    android:padding="@dimen/privacy_policy_text_view_padding"
                    android:text="@string/label_privacy_policy"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_small_size"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="@string/label_term"
                    android:id="@+id/termTextView"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/privacy_policy_text_view_padding"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_small_size"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:text="@string/label_help"
                    android:id="@+id/helpTextView"
                    style="@style/Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/privacy_policy_text_view_margin_bottom"
                    android:padding="@dimen/privacy_policy_text_view_padding"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_view_small_size"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>